# vibe1337

./: .gitignore  ANALYSIS_DELIVERABLES.md  CHANGELOG.md  EXECUTIVE_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  PUBLISH_CHECKLIST.md  QUICK_REFERENCE.md  README.md  UNUSED_COMPONENTS.md  claude.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_debug.py  vibe1337.py
core/: agent_service.py  claude.md  execution_engine.py  llm_orchestrator_fixed.py  memory_system.py  tool_message.py  tool_registry.py
docs/: IMPLEMENTATION_PLAN.md  claude.md
docs/archive/: ANALYSIS_SUMMARY.md  BUG_REPORT.md  CODEBASE_ANALYSIS.md  DEBUG_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md
tools/: claude.md
ui/: claude.md
ui/web/websocket_server/: main.py  nodes.py
